--- a/android/.gitignore
+++ b/android/.gitignore
@@ -1,3 +1,5 @@
+# firebase key
+app/google-services.json
 
 # Created by https://www.gitignore.io/api/androidstudio
 # Edit at https://www.gitignore.io/?templates=androidstudio
