--- a/Model/androi/app/build.gradle
+++ b/Model/androi/app/build.gradle
@@ -43,4 +43,7 @@ dependencies {
   testImplementation 'junit:junit:4.12'
   androidTestImplementation 'androidx.test:runner:1.2.0'
   androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+  implementation 'com.android.support:recyclerview-v7:28.0.0'
+  implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
