--- a/Model/androi/app/src/main/AndroidManifest.xml
+++ b/Model/androi/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         </activity>
 
         <activity android:name=".CameraActivity"></activity>
+        <activity android:name=".AddFriendPopupActivity" android:theme="@android:style/Theme.Dialog"></activity>
     </application>
 
 </manifest>
