--- a/Model/androi/app/build.gradle
+++ b/Model/androi/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 apply plugin: 'kotlin-android'
 
@@ -6,11 +7,11 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
   compileSdkVersion 29
-  buildToolsVersion "29.0.0"
+  buildToolsVersion "29.0.3"
   defaultConfig {
     applicationId "org.tensorflow.lite.examples.posenet"
     minSdkVersion 21
-    targetSdkVersion 23
+    targetSdkVersion 29
     versionCode 1
     versionName "1.0"
     testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -36,14 +37,16 @@ dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
   implementation project(":posenet")
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-  implementation 'com.android.support:appcompat-v7:28.0.0'
-  implementation 'com.android.support:design:28.0.0'
+  implementation 'androidx.appcompat:appcompat:1.1.0'
+  implementation 'com.google.android.material:material:1.1.0'
+  implementation 'com.google.firebase:firebase-analytics:17.4.2'
+  implementation 'com.google.firebase:firebase-database:19.3.0'
   implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
   implementation 'org.tensorflow:tensorflow-lite:2.1.0'
   testImplementation 'junit:junit:4.12'
   androidTestImplementation 'androidx.test:runner:1.2.0'
   androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-  implementation 'com.android.support:recyclerview-v7:28.0.0'
+  implementation 'androidx.recyclerview:recyclerview:1.1.0'
   implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
