--- a/Model/androi/app/src/main/AndroidManifest.xml
+++ b/Model/androi/app/src/main/AndroidManifest.xml
@@ -10,29 +10,23 @@
     <uses-sdk />
 
     <application
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/tfe_pn_app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.Posenet">
+        android:theme="@style/AppTheme.Posenet"
+        android:fullBackupContent="true"
+        android:allowBackup="true">
 
-        <activity
-            android:name=".TestActivity"
-            android:exported="true"
-            android:label="@string/tfe_pn_app_name"></activity>
-
-        <activity
-            android:name=".RankingActivity"
-            android:exported="true">
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".CameraActivity"></activity>
-        <activity android:name=".AddFriendPopupActivity" android:theme="@android:style/Theme.Dialog"></activity>
+        <activity android:name=".RankingActivity" />
+        <activity android:name=".CameraActivity" />
+        <activity android:name=".AddFriendPopupActivity" android:theme="@android:style/Theme.Dialog" />
     </application>
 
 </manifest>
