--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
     <uses-sdk />
-
     <application
         android:icon="@mipmap/ic_launcher"
         android:label="@string/tfe_pn_app_name"
@@ -18,7 +17,7 @@
         android:fullBackupContent="true"
         android:allowBackup="true">
 
-        <activity android:name=".LoginActivity">
+        <activity android:name=".TestActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
